Just a Minor Change

--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)file:///Users/karsh/Desktop/Portfolio.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+<head>
 	<title>My Portfolio</title>
+	
+	<style type="text/css">
+		h1{
+			font-size:50px;
+			text-align: center;
+			color: DarkBlue;
+			font-family: Courier New ;
+		}
+		h2{
+			font-size: 35px;
+			text-align: center;
+			font-family: Times New Roman;
+		}
+		h3{
+			font-size: 30px;
+			text-align: center;
+		}
+		h4{
+			font-size: 20px;
+			text-align: center;
+		}
+		h5{
+			font-size: 30px;
+			text-align: left;
+		}  
+		body{
+			background-color: AliceBlue;
+		}
+		div{
+			padding-left: 100px;
+			padding-right: 100px;
+		}
+		p{
+			font-size: 20px;
+			line-height: 30px;
+			font-family: Verdana;
+		}
+		ul{
+			font-size: 20px;
+			line-height: 30px;
+			font-family: Verdana;
+		}
+		
+	</style>
 </head>
 <body>
 	<h1>Hi Everyone</h1>
-	<h2>My name is <u>Karsh</u> <u>Patel</u></h2>
+	<h2>My Name is <u>Karsh Patel</u></h2>
 	<h3>Software Developer/Enginner</h3>
 	<h3>Audio Engineer/Producer</h3>
 	<div>
 		<p>
-			</p><h4><u>About me</u></h4>
+			<h4><u>About me</u></h4>
 			<p>
 			
 			Hi, My name is Karsh Patel. I am currently a student at City University of New York Queens College studying Computer Science. I am currently in my junior year. My curiosity about the ever growing tech space is one of the reasons I decided to major in Computer Science and also become an Audio Enginner/Producer. 
@@ -25,29 +69,30 @@
 		</p>
 		<h4><u>Skills</u></h4>
 		<p>
-			Programming Languages I am learning
+		
+			<u>Programming Languages I am learning</u>
 
-			</p><ul><li>C++</li></ul>
+			<ul><li>C++</li></ul>
 			<ul><li>Java</li></ul>
 			<ul><li>Python</li></ul>
 			<ul><li>Swift</li></ul>
 
-			Music Work
+			<p><u>Music Work</u></p>
 
 			<ul><li>Mixing Engineer</li></ul>
 			<ul><li>Mastering Enginner</li></ul>
 			<ul><li>Producer</li></ul>
-			<ul><li>HipHop | Pop | R&amp;B</li></ul>
+			<ul><li>HipHop | Pop | R&B</li></ul>
 
 			<p>I try to learn diffrent programming languages and frameworks in my free time. </p>
 			<p>I also work on mixing, mastering and producing music in my free time. </p>
 		
 
-		<p></p>
+		</p>
 		<p>
-		</p><h5>Contact Me</h5>
-		<p>I like to socialize and network aswell as collaborate on diffrent project with people wherther that be coding projects, digital content work or music collabs. </p>
-	    <p></p>
+		<h5>Contact Me</h5>
+		<p>I like to socialize and network as well as collaborate on diffrent project with people wherther that be coding projects, digital content work or music collabs. </p>
+	    </p>
 	</div>
-
-</body></html>
+</body>
+</html>
