Changes To Website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Portfolio</title>
-	
+
 	<style type="text/css">
 		h1{
 			font-size:50px;
@@ -26,7 +26,7 @@
 		h5{
 			font-size: 30px;
 			text-align: left;
-		}  
+		}
 		body{
 			background-color: AliceBlue;
 		}
@@ -44,32 +44,32 @@
 			line-height: 30px;
 			font-family: Verdana;
 		}
-		
+
 	</style>
 </head>
 <body>
 	<h1>Hi Everyone</h1>
 	<h2>My Name is <u>Karsh Patel</u></h2>
 	<h3>Software Developer/Enginner</h3>
-	<h3>Audio Engineer/Producer</h3>
+	<!-- <h3>Audio Engineer/Producer</h3> -->
 	<div>
 		<p>
 			<h4><u>About me</u></h4>
 			<p>
-			
-			Hi, My name is Karsh Patel. I am currently a student at City University of New York Queens College studying Computer Science. I am currently in my junior year. My curiosity about the ever growing tech space is one of the reasons I decided to major in Computer Science and also become an Audio Enginner/Producer. 
-			
+
+			Hi, My name is Karsh Patel. I am currently a student at City University of New York Queens College studying Computer Science. I am currently in my junior year. My curiosity about the ever growing tech space is one of the reasons I decided to major in Computer Science.
+
 			<strong></strong>
 		</p>
 		<h4><u>Work/Projects</u></h4>
 		<p>
 
-			Most of my work is available on either github, trello or codepen. I have worked in many diffrent fields like health care, music, retail, and building digital content. My music work can be found on SoundCloud, Apple Music, Spotify, Tidal and iTunes. 
+			Most of my work is available on either github, trello or codepen. I have worked in many diffrent fields like Finance, Health Care, Education, and building digital content.
 
 		</p>
 		<h4><u>Skills</u></h4>
 		<p>
-		
+
 			<u>Programming Languages I am learning</u>
 
 			<ul><li>C++</li></ul>
@@ -77,21 +77,13 @@
 			<ul><li>Python</li></ul>
 			<ul><li>Swift</li></ul>
 
-			<p><u>Music Work</u></p>
-
-			<ul><li>Mixing Engineer</li></ul>
-			<ul><li>Mastering Enginner</li></ul>
-			<ul><li>Producer</li></ul>
-			<ul><li>HipHop | Pop | R&B</li></ul>
-
 			<p>I try to learn diffrent programming languages and frameworks in my free time. </p>
-			<p>I also work on mixing, mastering and producing music in my free time. </p>
-		
+
 
 		</p>
 		<p>
 		<h5>Contact Me</h5>
-		<p>I like to socialize and network as well as collaborate on diffrent project with people wherther that be coding projects, digital content work or music collabs. </p>
+		<p>I like to socialize and network as well as collaborate on diffrent project with people wherther that be coding projects or digital content work. </p>
 	    </p>
 	</div>
 </body>
