--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h4><u>About me</u></h4>
 			<p>
 
-			Hi, My name is Karsh Patel. I am currently a student at City University of New York Queens College studying Computer Science. I am currently in my junior year. My curiosity about the ever growing tech space is one of the reasons I decided to major in Computer Science.
+			I am currently a student at City University of New York Queens College studying Computer Science. I am currently in my seniot year. My curiosity about the ever growing tech space is one of the reasons I decided to major in Computer Science.
 
 			<strong></strong>
 		</p>
@@ -74,8 +74,8 @@
 
 			<ul><li>C++</li></ul>
 			<ul><li>Java</li></ul>
+			<ul><li>JavaScript</li></ul>
 			<ul><li>Python</li></ul>
-			<ul><li>Swift</li></ul>
 
 			<p>I try to learn diffrent programming languages and frameworks in my free time. </p>
 
